# base-rust-web-api

./: Cargo.toml  README.md
src/: main.rs
src/db/migrations/: 1768713237248_create-user-table_down.sql  1768713237248_create-user-table_up.sql
src/domain/user/: controller.rs  dto.rs  repo.rs  service.rs
src/primitives/http/: request.rs
src/routing/: init.rs  mod.rs
src/util/: pagination.rs
