[package]
name = "base-rust-web-api"
version = "0.1.0"
edition = "2024"

[dependencies]
trpl = "0.3.0"
tokio = { version = "1", features = ["rt", "net", "io-util"] }
chrono = "0.4.43"
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }
serde = "1.0.228"
serde_json = "1.0.149"
bcrypt = "0.18.0"
